Styled index page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
     <title>Homepage | Maren Rindfleisch</title>
   </head>
   <body>
-    <h2>HI, I am</h2>
-    <h1>Maren Rindfleisch</h1>
+    <div class="container">
+      <div class="hero">
+        <h3>Hi, I am</h3>
+        <h1>Maren Rindfleisch</h1>
+        <h2>Front-end developer based in Germany</h2>
+        <a href="contact.html" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
