Added main structure on professional page

--- a/professional.html
+++ b/professional.html
@@ -33,7 +33,64 @@
     <title>Professional projects | Maren Rindfleisch</title>
   </head>
   <body>
-    <h1>Professional</h1>
+    <div class="container professional-hero">
+      <div class="row">
+        <h1>Professional</h1>
+        <h2>Front-end developer, based in Germany</h2>
+        <div class="col-md-6">
+          <img
+            src="/images/excel.png"
+            alt="Excel Dashboard with data-analysis"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <p>
+            Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos. Aenean viverra accumsan porta. Interdum et
+            malesuada fames ac ante ipsum primis in faucibus. Phasellus vel
+            augue vitae augue feugiat ultricies. Pellentesque ut ante et augue
+            vestibulum interdum a eu eros.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <p>
+            Nulla fermentum nisl sapien, interdum interdum nisi efficitur id.
+            Morbi egestas maximus elit et finibus. Donec pellentesque arcu non
+            mattis mollis. Nulla mattis rhoncus lobortis. Morbi nisl est,
+            vehicula quis mi eu, dignissim cursus libero. Nulla convallis
+            gravida lorem, sodales cursus lectus porta euismod. Morbi sit amet
+            sem a dui tempor commodo. Etiam sed sodales dolor. Quisque congue in
+            dolor in faucibus. Donec vitae iaculis ex.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/weather.png"
+            alt="Weather application project with API"
+            class="img-fliud"
+          />
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/hometown.png"
+            alt="hometowm single pahe project"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <p>
+            Donec viverra, est id placerat malesuada, ante nisl aliquam erat, eu
+            ultrices ex ipsum eu nisl. Curabitur sit amet sapien justo. Aenean
+            dapibus mi fringilla, malesuada nibh nec, scelerisque purus.
+            Suspendisse tempus neque orci, nec luctus dui luctus in. Quisque
+            dignissim volutpat turpis in iaculis. Ut aliquet mattis elit, tempus
+            euismod purus. Sed auctor vestibulum ligula, vitae tempor tellus.
+            Praesent id nisi est.
+          </p>
+        </div>
+      </div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
