linked professional page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <title>Homepage | Maren Rindfleisch</title>
   </head>
   <body>
+    <a href="professional.html">Professional</a>
     <div class="hero">
       <h3>Hi, I am</h3>
       <h1>Maren Rindfleisch</h1>
