build structure for personal page, applied css

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </head>
   <body>
     <a href="professional.html">Professional</a>
+    <a href="personal.html">personal</a>
     <div class="hero">
       <h3>Hi, I am</h3>
       <h1>Maren Rindfleisch</h1>
