--- a/personal.html
+++ b/personal.html
@@ -33,7 +33,71 @@
     <title>Personal Interests and Projects | Maren Rindfleisch</title>
   </head>
   <body>
-    <h1>Personal</h1>
+    <a href="index.html">homepage</a>
+
+    <div class="hero">
+      <h1>Personal</h1>
+      <h2>In my personal life, I like to do abc and spend my time on xyz.</h2>
+    </div>
+
+    <div class="container">
+      <div class="row personal-projects">
+        <div class="col-md-6">
+          <img
+            src="images/dog.png"
+            alt="Ordering Baklava with my dog in Queens"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2>Explore culinary diversity</h2>
+          <p>
+            Suspendisse aliquam gravida tortor, sit amet blandit diam lacinia
+            id. Nunc malesuada faucibus scelerisque. Morbi dolor neque,
+            hendrerit vel erat ut, mollis posuere massa. Vestibulum nec
+            ullamcorper eros.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h2>Make music</h2>
+          <p>
+            Curabitur quis ligula lacus. Praesent mollis efficitur eleifend. Ut
+            bibendum ornare mi quis feugiat. Quisque fringilla ipsum non diam
+            congue elementum fermentum quis eros. Nam eleifend, ante quis
+            vehicula imperdiet, nulla mi dignissim sapien, nec eleifend est arcu
+            ac quam.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="images/music.png" alt="Making music" class="img-fluid" />
+        </div>
+        <div class="col-md-12">
+          <h2>Travel</h2>
+          <p>
+            Phasellus in quam laoreet, dapibus nulla ut, lacinia massa. Aliquam
+            pellentesque tempus turpis vel ultricies. Donec sed risus ut diam
+            bibendum tincidunt in maximus elit.
+          </p>
+        </div>
+
+        <div class="col-md-6 travel">
+          <img
+            src="images/travel.png"
+            alt="sitting on a cliff in spain"
+            class="img-fluid"
+          />
+        </div>
+
+        <div class="col-md-6 travel">
+          <img
+            src="images/nyc.png"
+            alt="exploring new york city"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </div>
+
     <script src="src/app.js"></script>
   </body>
 </html>
