Added content to and styled contact page

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,42 @@
     <title>Contact me | Maren Rindfleisch</title>
   </head>
   <body>
-    <h1>Contact Me</h1>
+    <div class="hero">
+      <h1>Contact Me</h1>
+      <br />
+      <h2>
+        <em>
+          "Everyone you will ever meet knows something you don't." <br />-Bill
+          Nye</em
+        >
+
+        <br />
+        <br />I would love to learn about the things you know so let's connect
+        and broaden our horizons!
+      </h2>
+    </div>
+    <div class="contact">
+    <p class="text-center">
+      Send me an Email:<br />
+      <a href="mailto:maren.rindfleisch@gmail.com" class="btn btn-branding"
+        ><i class="fa-regular fa-envelope"></i
+      ></a>
+    </p>
+    <p class="text-center">
+      Join my network on LinkedIn: <br />
+      <a
+        href="https://www.linkedin.com/in/marenrindfleisch/"
+        class="btn btn-branding" target="_blank"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+    </p>
+    <p class="text-center">
+      Develop software with me on GitHub: <br />
+      <a href="https://github.com/MarenRindfleisch" class="btn btn-branding" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </p>
+<div></div>
     <script src="src/app.js"></script>
   </body>
 </html>
