--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <body>
     <a href="professional.html">Professional</a>
     <a href="personal.html">personal</a>
+    <a href="contact.html">contact</a>
     <div class="hero">
       <h3>Hi, I am</h3>
       <h1>Maren Rindfleisch</h1>
