--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,17 @@
     <title>Contact me | Maren Rindfleisch</title>
   </head>
   <body>
+        <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/mr.png" alt="logo" class="logo" />
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="professional.html">Professional</a></li>
+          <li><a href="personal.html">Personal</a></li>
+          <li class="active"><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <h1>Contact Me</h1>
       <br />
