--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
     <title>Homepage | Maren Rindfleisch</title>
   </head>
   <body>
-    <a href="professional.html">Professional</a>
-    <a href="personal.html">personal</a>
-    <a href="contact.html">contact</a>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/mr.png" alt="logo" class="logo" />
+        <ul>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="professional.html">Professional</a></li>
+          <li><a href="personal.html">Personal</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <h3>Hi, I am</h3>
       <h1>Maren Rindfleisch</h1>
