--- a/personal.html
+++ b/personal.html
@@ -33,7 +33,17 @@
     <title>Personal Interests and Projects | Maren Rindfleisch</title>
   </head>
   <body>
-    <a href="index.html">homepage</a>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/mr.png" alt="logo" class="logo" />
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="professional.html">Professional</a></li>
+          <li class="active"><a href="personal.html">Personal</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
     <div class="hero">
       <h1>Personal</h1>
