Added and styled the footer

--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
           </p>
         </div>
       </div>
+
+      <footer>
+        <div class="social-links d-flex justify-content-around">
+          <a href="mailto:maren.rindfleisch@gmail.com"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
+          <a href="https://github.com/MarenRindfleisch" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/marenrindfleisch/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin-in"></i
+          ></a>
+          <a
+            href="https://www.xing.com/profile/Maren_Rindfleisch/cv"
+            target="_blank"
+            ><i class="fa-brands fa-xing"></i
+          ></a>
+        </div>
+      </footer>
     </div>
     <script src="src/app.js"></script>
   </body>
