Checked SEO friendliness, added paragraph to page bottom

--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
       <br />
       <h2>
         <em>
-          "Everyone you will ever meet knows something you don't." <br />-Bill
-          Nye</em
-        >
+          "Everyone you will ever meet knows something you don't." - Bill
+          Nye
+        </em>
 
         <br />
         <br />I would love to learn about the things you know so let's connect
@@ -61,25 +61,44 @@
     <div class="contact">
     <p class="text-center">
       Send me an Email:<br />
-      <a href="mailto:maren.rindfleisch@gmail.com" class="btn btn-branding"
+      <a href="mailto:maren.rindfleisch@gmail.com" class="btn btn-branding" title="Open your deafault email program to send a direct message to Maren"
         ><i class="fa-regular fa-envelope"></i
+      ></a>
+    </p>
+        <p class="text-center">
+      Code with me on GitHub: <br />
+      <a href="https://github.com/MarenRindfleisch" class="btn btn-branding" target="_blank" title="Go to GitHub du see Maren's coding projects and to connect"
+        ><i class="fa-brands fa-github"></i
       ></a>
     </p>
     <p class="text-center">
       Join my network on LinkedIn: <br />
       <a
         href="https://www.linkedin.com/in/marenrindfleisch/"
-        class="btn btn-branding" target="_blank"
+        class="btn btn-branding" target="_blank" title="Go to the business-network LinkedIn to join Marens network"
         ><i class="fa-brands fa-linkedin"></i
       ></a>
     </p>
-    <p class="text-center">
-      Develop software with me on GitHub: <br />
-      <a href="https://github.com/MarenRindfleisch" class="btn btn-branding" target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
+        <p class="text-center">
+      Get in touch on Xing: <br />
+          <a
+            href="https://www.xing.com/profile/Maren_Rindfleisch/cv"
+             class="btn btn-branding"
+            target="_blank"
+            title="See Maren's Profile on Xing in a new browsertab"
+            ><i class="fa-brands fa-xing"></i
+          ></a>
     </p>
-<div></div>
+    <p class="h6 open-sourced">
+      This website was coded by Maren Rindfleisch, and is
+      <a
+        href="https://github.com/MarenRindfleisch/portfolio-project"
+        target="_blank"
+        title="Portfolio-project on GitHub, coded by Maren Rindfleisch"
+        >open-sourced
+      </a>
+    </p>
+
     <script src="src/app.js"></script>
   </body>
 </html>
