--- a/personal.html
+++ b/personal.html
@@ -55,7 +55,7 @@
         <div class="col-md-6">
           <img
             src="images/dog.png"
-            alt="Ordering Baklava with my dog in Queens"
+            alt="Ordering Baklava with the dog in Queens"
             class="img-fluid"
           />
         </div>
@@ -79,7 +79,11 @@
           </p>
         </div>
         <div class="col-md-6">
-          <img src="images/music.png" alt="Making music" class="img-fluid" />
+          <img
+            src="images/music.png"
+            alt="Maren by a mixing table, making music"
+            class="img-fluid"
+          />
         </div>
         <div class="col-md-12">
           <h2>Travel</h2>
@@ -93,7 +97,7 @@
         <div class="col-md-6 travel">
           <img
             src="images/travel.png"
-            alt="sitting on a cliff in spain"
+            alt="sitting on a cliff in Spain"
             class="img-fluid"
           />
         </div>
@@ -109,22 +113,40 @@
     </div>
     <footer>
       <div class="social-links d-flex justify-content-around">
-        <a href="mailto:maren.rindfleisch@gmail.com"
+        <a
+          href="mailto:maren.rindfleisch@gmail.com"
+          title="Open your deafault mailing programm to send a direct message to Maren"
           ><i class="fa-regular fa-envelope"></i
         ></a>
-        <a href="https://github.com/MarenRindfleisch" target="_blank"
+        <a
+          href="https://github.com/MarenRindfleisch"
+          target="_blank"
+          title="See Maren's GitHub Profile in a new browsertab"
           ><i class="fa-brands fa-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/marenrindfleisch/" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/marenrindfleisch/"
+          target="_blank"
+          title="See Maren's Profile on LinkedIn in a new browsertab"
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
         <a
           href="https://www.xing.com/profile/Maren_Rindfleisch/cv"
           target="_blank"
+          title="See Maren's Profile on Xing in a new browsertab"
           ><i class="fa-brands fa-xing"></i
         ></a>
       </div>
     </footer>
+    <p class="h6 open-sourced">
+      This website was coded by Maren Rindfleisch, and is
+      <a
+        href="https://github.com/MarenRindfleisch/portfolio-project"
+        target="_blank"
+        title="Portfolio-project on GitHub, coded by Maren Rindfleisch"
+        >open-sourced
+      </a>
+    </p>
     <script src="src/app.js"></script>
   </body>
 </html>
