--- a/professional.html
+++ b/professional.html
@@ -106,24 +106,40 @@
     </div>
       <footer>
         <div class="social-links d-flex justify-content-around">
-          <a href="mailto:maren.rindfleisch@gmail.com"
+          <a
+            href="mailto:maren.rindfleisch@gmail.com"
+            title="Open your deafault mailing programm to send a direct message to Maren"
             ><i class="fa-regular fa-envelope"></i
           ></a>
-          <a href="https://github.com/MarenRindfleisch" target="_blank"
+          <a
+            href="https://github.com/MarenRindfleisch"
+            target="_blank"
+            title="See Maren's GitHub Profile in a new browsertab"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/marenrindfleisch/"
             target="_blank"
+            title="See Maren's Profile on LinkedIn in a new browsertab"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
           <a
             href="https://www.xing.com/profile/Maren_Rindfleisch/cv"
             target="_blank"
+            title="See Maren's Profile on Xing in a new browsertab"
             ><i class="fa-brands fa-xing"></i
           ></a>
         </div>
       </footer>
+      <p class="h6 open-sourced">
+        This website was coded by Maren Rindfleisch, and is
+        <a
+          href="https://github.com/MarenRindfleisch/portfolio-project"
+          target="_blank"
+          title="Portfolio-project on GitHub, coded by Maren Rindfleisch"
+          >open-sourced
+        </a>
+      </p>
     <script src="src/app.js"></script>
   </body>
 </html>
