--- a/index.html
+++ b/index.html
@@ -38,14 +38,26 @@
         <img src="images/mr.png" alt="logo" class="logo" />
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="professional.html">Professional</a></li>
-          <li><a href="personal.html">Personal</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="professional.html" title="Go to Maren's professional page"
+              >Professional</a
+            >
+          </li>
+          <li>
+            <a href="personal.html" title="Go to Maren's personal page"
+              >Personal</a
+            >
+          </li>
+          <li>
+            <a href="contact.html" title="Go to Maren's contact page"
+              >Contact</a
+            >
+          </li>
         </ul>
       </nav>
     </div>
     <div class="hero">
-      <h3>Hi, I am</h3>
+      <h2>Hi, I am</h2>
       <h1>Maren Rindfleisch</h1>
       <h2>Front-end developer based in Germany</h2>
       <a href="contact.html" class="btn btn-branding">Contact me</a>
@@ -82,24 +94,40 @@
 
       <footer>
         <div class="social-links d-flex justify-content-around">
-          <a href="mailto:maren.rindfleisch@gmail.com"
+          <a
+            href="mailto:maren.rindfleisch@gmail.com"
+            title="Open your deafault mailing programm to send a direct message to Maren"
             ><i class="fa-regular fa-envelope"></i
           ></a>
-          <a href="https://github.com/MarenRindfleisch" target="_blank"
+          <a
+            href="https://github.com/MarenRindfleisch"
+            target="_blank"
+            title="See Maren's GitHub Profile in a new browsertab"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/marenrindfleisch/"
             target="_blank"
+            title="See Maren's Profile on LinkedIn in a new browsertab"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
           <a
             href="https://www.xing.com/profile/Maren_Rindfleisch/cv"
             target="_blank"
+            title="See Maren's Profile on Xing in a new browsertab"
             ><i class="fa-brands fa-xing"></i
           ></a>
         </div>
       </footer>
+      <p class="h6 open-sourced">
+        This website was coded by Maren Rindfleisch, and is
+        <a
+          href="https://github.com/MarenRindfleisch/portfolio-project"
+          target="_blank"
+          title="Portfolio-project on GitHub, coded by Maren Rindfleisch"
+          >open-sourced
+        </a>
+      </p>
     </div>
     <script src="src/app.js"></script>
   </body>
